Final Frontend code

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="main">
 <head>
   <meta charset="utf-8">
   <title>LeaveTracker</title>
-  <body style="background-color:rgb(223, 245, 248);"></body>
+  <body class="bgcolor"></body>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/Atos.png">
